[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Abinav Ramesh Sundararaman", email = "abinavrameshs@gmail.com"},
]
dependencies = [
    "pyodbc>=4.0.35",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.1",
    "pypyodbc>=1.3.6",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
